--- a/style.css
+++ b/style.css
@@ -79,9 +79,9 @@ nav ul{
     display: flex;
     width: 100%;
 }
-.feature-images{
+/* .feature-images{
     
-}
+} */
 /* .feature-images-1{
     position:relative;
 }
