--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
     padding:0;
     font-family: "Prociono", serif;
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
 
 
 .architects-banner,.banner-content{
@@ -100,6 +104,7 @@ nav ul{
 .experience-banner{
     display: flex;
     margin-top: 2rem;
+    width: 100%;
 }
 
 .experience-content-enjoy{
@@ -112,8 +117,8 @@ nav ul{
 }
 #btn {
     position: absolute;
-    top: 150rem;
-    left: 31rem;
+    top: 439vmax;
+    left: 89vmin;
 }
 
 .some-facts-icons{
@@ -146,7 +151,10 @@ footer {
     margin-top: 1rem;
 }
 
-
+.experience-image img{
+    width: 99%;
+    
+}
 
 
 /* strting of responsive design */
@@ -225,6 +233,26 @@ footer {
 /* for medium device */
 
 @media screen and (min-width:568px) and (max-width:1284px) {
+
+    .feature-images img {
+      
+        width: 95%;
+    }
+    .some-facts-icons {
+        /* display: flex; */
+        gap: 0vw;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .experience-banner {
+        /* display: flex; */
+        /* margin-top: 2rem; */
+        width: 100%;
+        flex-direction: column;
+    }
+
+
     .feature-section{
         flex-direction: column;
     }
@@ -236,6 +264,10 @@ footer {
       
         top: 1rem;
     }
+
+.hide{
+    display: none;
+}
 
 
 
