--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 .features-span{
     color:orangered
 }
-
+.experience-title {
+    border-left: 4px solid orange;
+    
+    padding-left: 14px;
+}
 body{
     margin: 0;
     padding:0;
@@ -15,6 +19,7 @@ main{
     max-width: 1440px;
     margin: 0 auto;
 }
+
 
 
 .architects-banner,.banner-content{
@@ -110,15 +115,31 @@ nav ul{
 .experience-content-enjoy{
     padding: 0.5rem;
 }
-.experience-tabs div{
-    background-color: #dfd7d725;
-    margin: .4rem;
-    padding:0.4rem
+.experience-tabs div {
+    background-color: #FFF;
+    margin-left: 1.5rem;
+    padding: 0.4rem;
+    box-shadow: -5px 2px 20px 8px rgb(0 0 0 / 18%);
 }
 #btn {
-    position: absolute;
-    top: 439vmax;
-    left: 89vmin;
+    
+    margin:0;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 20px;
+    background-color: #FF900E;
+    width: 20%;
+    color:#FFF;
+    position: relative;
+    left:65%;
+    bottom:90px
+
+}
+
+
+#btn h1,p{
+    margin: 0;
+
 }
 
 .some-facts-icons{
